# fleck

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.agents/skills/scopeguard/: README.md  SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
.plan/: coverage.md  decisions.md  requirements.md  spec.md  tasks.md
crates/fleck-cli/: Cargo.toml
crates/fleck-cli/src/: main.rs
crates/fleck-core/: Cargo.toml
crates/fleck-core/src/: command.rs  export.rs  geometry.rs  image_import.rs  layer.rs  lib.rs  model.rs  persistence.rs  pixel.rs  selection.rs
crates/fleck-render/: Cargo.toml
crates/fleck-render/src/: lib.rs
docs/: architecture.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_commands.rs  lib.rs  main.rs
src/components/fleck/: canvas.tsx  command-palette.tsx  export-preview-dialog.tsx  file-menu.tsx  menu-bar.tsx  select-menu.tsx  selection-hud.tsx  side-panel.tsx  status-bar.tsx  tool-options.tsx  tool-strip.tsx  window-controls.tsx  workspace-dialogs.tsx
src/components/ui/: button.tsx  context-menu.tsx  dropdown-menu.tsx  tabs.tsx
src/lib/: api.ts  area-commands.ts  command-registry.ts  export-commands.ts  fleck-data.ts  fuzzy.ts  image-commands.ts  image-import.ts  layer-commands.ts  queries.ts  query-client.ts  render.ts  selection-commands.ts  viewport.ts  window.ts
src/store/: command-store.ts  ui-store.ts  viewport-store.ts  workspace-files-store.ts
