[package]
name = "fleck-desktop"
version = "0.1.0"
description = "Fleck desktop shell"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fleck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "Fleck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
base64 = "0.22.1"
fleck-core = { path = "../crates/fleck-core" }
fleck-render = { path = "../crates/fleck-render" }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.0"

[lints]
workspace = true
