[package]
name = "fleck-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fleck-core = { path = "../fleck-core" }
skia-safe = { version = "0.97.2", features = ["binary-cache"] }
thiserror = "2.0.18"

[lints]
workspace = true
